--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1"
   },
+  "dependencies": {
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "axios": "^1.7.2"
+}
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
